======================================================================
2009-05-04 Added TJ's fill_betweenx patch - JDH

2009-05-02 Added options to plotfile based on question from
           Joseph Smidt and patch by Matthias Michler. - EF


2009-05-01 Changed add_artist and similar Axes methods to
           return their argument. - EF

2009-04-30 Incorrect eps bbox for landscape mode fixed - JJL

2009-04-28 Fixed incorrect bbox of eps output when usetex=True. - JJL

2009-04-24 Changed use of os.open* to instead use subprocess.Popen.
           os.popen* are deprecated in 2.6 and are removed in 3.0. - RMM

2009-04-20 Worked on axes_grid documentation. Added
           axes_grid.inset_locator. - JJL

2009-04-17 Initial check-in of the axes_grid toolkit. - JJL

2009-04-17 Added a support for bbox_to_anchor in
           offsetbox.AnchoredOffsetbox. Improved a documentation.
           - JJL

2009-04-16 Fixed a offsetbox bug that multiline texts are not
           correctly aligned.  - JJL

2009-04-16 Fixed a bug in mixed mode renderer that images produced by
           an rasterizing backend are placed with incorrect size.
           - JJL

2009-04-14 Added Jonathan Taylor's Reinier Heeres' port of John
           Porters' mplot3d to svn trunk.  Package in
           mpl_toolkits.mplot3d and demo is examples/mplot3d/demo.py.
           Thanks Reiner

2009-04-06 The pdf backend now escapes newlines and linefeeds in strings.
           Fixes sf bug #2708559; thanks to Tiago Pereira for the report.

2009-04-06 texmanager.make_dvi now raises an error if LaTeX failed to
           create an output file. Thanks to Joao Luis Silva for reporting
           this. - JKS

2009-04-05 _png.read_png() reads 12 bit PNGs (patch from
           Tobias Wood) - ADS

2009-04-04 Allow log axis scale to clip non-positive values to
           small positive value; this is useful for errorbars. - EF

2009-03-28 Make images handle nan in their array argument.